# fastapi_fs

./: .gitignore  pyproject.toml
app/: __init__.py
app/api/v1/routes/: auth.py
app/api/v1/schemas/: auth.py
app/core/: config.py
app/db/: main.py  redis.py
app/dependencies/: auth.py
app/models/: auth.py
app/services/: auth.py
app/utils/: pass_hash.py  tokens.py
migrations/: env.py
migrations/versions/: 31da7571bc37_initial.py  ebdd48ee8514_add_password_hash.py  f26ee2b8c201_add_roles_to_users.py
